updated index.html in home

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <!-- Add any additional styles or scripts if needed -->
 </head>
 <body>
-    <h1>YOLOv5 Object Detection</h1>
+    <h1>YOLOv5 Object Detection for industries</h1>
     <div class="card">
         <img src="{{ url_for('video_feed') }}" alt="Video Stream">
     </div>
